--- a/login/static/login/css/main.css
+++ b/login/static/login/css/main.css
@@ -41,3 +41,24 @@ form {
     width: 300px;
     margin-top: 50px;
 }
+
+main aside {
+    float: left;
+    width: 30%;
+    height: 100vh;
+    background: #15ff00;
+    padding: 5px;
+    color: rgb(255, 0, 0);
+    border-right: 5px solid #4d4d4d;
+}
+
+main aside ul li {
+    border: 2px solid black;
+    border-radius: 10px;
+    height: 90px;
+    padding: 5px;
+    margin: 5px;
+    margin-left: -20px;
+    background: #0cbad8;
+    list-style: none;
+}
