--- a/login/static/login/css/main.css
+++ b/login/static/login/css/main.css
@@ -90,3 +90,11 @@ main aside ul li {
 .errorlist {
     padding: 0;
 }
+
+div #TextArea{
+    width: 80vh;
+    height: 400px;
+    border: 5px solid black;
+    background: rgb(171, 226, 228);
+    color: #000;
+}
