--- a/login/templates/login/public_chat.html
+++ b/login/templates/login/public_chat.html
@@ -66,7 +66,8 @@
                         
                     },
                     function (data, status) {
-                        document.getElementById("message").value = data["mystring"];
+                        console.log(data)
+                        // document.getElementById("message").value = data["mystring"];
 
                     });
             });
